Fixed portfolio hover on Firefox and Safari

--- a/css/inner.sass
+++ b/css/inner.sass
@@ -23,12 +23,21 @@
         height: auto
         padding: 0
         margin: 0
+        
+
+        &:hover
+            @include transition(all, 0.3s, linear)
+            opacity: 0.5
 
     video
         max-width: 100%
         height: auto
         padding: 0
         margin: 0
+
+    a
+
+        background: gray
 
 
 %col
